fixed shift bug, added btn select

--- a/#src/scss/_global.scss
+++ b/#src/scss/_global.scss
@@ -15,7 +15,6 @@ body {
   font-size: 14px;
   line-height: 1.3;
   letter-spacing: 0.02em;
-  overflow-x: hidden;
 
   &._lock {
     overflow: hidden;
