--- a/#src/scss/pages/_product-page.scss
+++ b/#src/scss/pages/_product-page.scss
@@ -342,7 +342,7 @@
     flex-wrap: wrap;
     margin: -3px;
 
-    li {
+    button {
       position: relative;
       display: flex;
       justify-content: center;
@@ -367,7 +367,8 @@
         opacity: 0;
       }
 
-      &:hover {
+      &:hover,
+      &.selected {
         border: 1px solid $black;
 
         &::after {
